--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(Life VERSION 0.1)
 
 set(CMAKE_SOURCE_DIR "src/")
 
-add_executable(PROJECT_NAME "src/main.c")
-target_link_libraries(PROJECT_NAME curses)
-target_link_libraries(PROJECT_NAME m)
+add_executable(Life "src/main.c")
+target_link_libraries(Life curses)
+target_link_libraries(Life m)
